--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -4,14 +4,19 @@
       @content;
     }
   }
-  @if $breakpoint==desktop {
-    @media only screen and (min-width: 992px) {
+  @if $breakpoint==tablet {
+    @media only screen and (min-width: 601px) and (max-width: 991px) {
       @content;
     }
   }
-  @if $breakpoint==tablet {
-    @media only screen and (device-width: 601px) and (max-device-width: 1280px) {
-      @content
+  @if $breakpoint==tablet-desktop {
+    @media only screen and (min-width: 601px) {
+      @content;
+    }
+  }
+  @if $breakpoint==desktop {
+    @media only screen and (min-width: 992px) {
+      @content;
     }
   }
 }
